# slurm-like-task-manager

./: .gitignore  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.github/workflows/: publish.yml
task_manager/: __init__.py  cli.py  config.py  core.py  email.py  monitor.py
task_manager/config/: email_config.json
